[package]
name = "luahint"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crop = "0.3.0"
dashmap = "5.4.0"
full_moon = "0.18.1"
lsp-types = "0.94.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
slotmap = "1.0.6"
tokio = { version = "1.28.2", features = ["full"] }
tower-lsp = "0.19.0"
tracing-subscriber = "0.3.17"
